--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
 certifi==2022.6.15
+cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.5
+Flask==2.1.2
+gevent==21.12.0
+greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
 Js2Py==0.71
 lxml==4.9.0
+MarkupSafe==2.1.1
 numpy==1.23.0
 Pillow==9.1.1
+pycparser==2.21
 pyjsparser==2.7.1
 pytz-deprecation-shim==0.1.0.post0
 pyzbar==0.1.9
@@ -13,4 +24,7 @@ six==1.16.0
 tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.9
+Werkzeug==2.1.2
 yapf==0.32.0
+zope.event==4.5.0
+zope.interface==5.4.0
